src/App.css
/* ... */
.modalButtonsContainer .no {
  font-weight: 500;
  background: transparent;
  border: 0;
  cursor: pointer;
}
.getnotifiedbutton {
  color: rgba(255, 255, 255, 1);
  border-color: rgba(0, 0, 0, 0.2);
  position: fixed;
  top: 10px;
  right: 10px;
  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
  padding: 0.4rem 0.56rem 0.25rem 0.56rem;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 0.3rem;
  z-index: 999;
}
.notificationModalContent > p {
  padding-top: 0.7em;
}
/* Mobile CSS*/

.mobile {
  display: unset;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-color: #c8c8c8;
  height: 100vh;
}
.mobile > .navbar {
  display: none;
}
.mobile .map {
  will-change: transform;
  position: fixed;
  width: 100%;
}
.mobile .tab {
  width: 100%;
  padding: 8px 16px 0 16px;
  border: 1px solid rgba(0, 0, 0, 0.05);
  box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
  border-radius: 10px 10px 0px 0px;
  box-sizing: border-box;
  z-index: 100;
  position: absolute;
  background-color: rgba(255, 255, 255, 0.9);
  backdrop-filter: blur(5px);
  min-height: 287px;
  margin-top: 59vh;
}
.mobile .pullbar {
  height: 5px;
  width: 75px;
  background-color: #c4c4c4;
  border-radius: 100px;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  will-change: transform;
}

.navbar-toggler {
  will-change: transform;
  color: rgba(255, 255, 255, 1);
  border-color: rgba(0, 0, 0, 0.2);
  position: fixed;
  top: 10px;
  right: 10px;
  background-color: rgba(255, 255, 255, 1);
  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
  padding: 0.3rem 0.4rem;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 0.3rem;
}
.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navdrawer-container {
  will-change: transform;
  display: flex;
  position: fixed;
  height: 100vh;
  width: 70vw;
  top: 0;
  right: 0;
  z-index: 99999;
  padding: 24px;
  background-color: rgba(255, 255, 255, 0.95);
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border-radius: 5px 0px 0px 0px;
  backdrop-filter: blur(5px);
  overflow: auto;
  transition: transform 0.3s ease-in-out;
}

.backdrop-container {
  will-change: transform;
  position: fixed;
  height: 100vh;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(5px);
  z-index: 99998;
  transition: opacity 0.3s ease-in-out;
}
.mobile .navbar-items,
.mobile .navbar-nav {
  flex-direction: column;
  align-items: center;
}
.desktop .signature {
  display: none;
}
.mobile .signature {
  display: flex;
  justify-content: center;
  margin: 10px 0px;
}
.mobile .getnotifiedbutton {
  color: rgba(255, 255, 255, 1);
  border-color: rgba(0, 0, 0, 0.2);
  position: fixed;
  top: 60px;
  right: 10px;
  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
  padding: 0.4rem 0.56rem 0.25rem 0.56rem;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 0.3rem;
}

