Fixed GetNotifiedBottun z-index

--- a/src/App.css
+++ b/src/App.css
@@ -639,7 +639,7 @@ a:not([href]):not([tabindex]):focus {
   font-size: 1.25rem;
   line-height: 1;
   border-radius: 0.3rem;
-  z-index: 999;
+  z-index: 99;
 }
 .notificationModalContent > p {
   padding-top: 0.7em;
